Add AWS_DOCKER_ENV_VARIABLES_BUCKET for gitlab config template

--- a/templates/gitlab/project_variables.json
+++ b/templates/gitlab/project_variables.json
@@ -58,9 +58,17 @@
 {
   "variable_type": "file",
   "key": "DOCKER_ENV_VARIABLES",
-  "value": "NEXT_PUBLIC_API_HOST=https://${app_domain_name}",
+  "value": "FAKE_VARIABLE=fake_value",
   "protected": false,
   "masked": false,
   "environment_scope": "${env_scope}"
-}
+},
+{
+  "variable_type": "env_var",
+  "key": "AWS_DOCKER_ENV_VARIABLES_BUCKET",
+  "value": "${env_variable_s3_bucket}",
+  "protected": false,
+  "masked": false,
+  "environment_scope": "${env_scope}"
+},
 ]
